# expenses-sharing

./: README.md  docker-compose.yml
backend/: Cargo.toml  README.md  diesel.toml
backend/migrations/2024-09-07-102159_create_expense_lists/: down.sql  up.sql
backend/migrations/2024-09-07-162535_create_users/: down.sql  up.sql
backend/migrations/2024-09-07-164741_create_expenses/: down.sql  up.sql
backend/src/: http_errors.rs  http_utils.rs  lib.rs  main.rs  models.rs  schema.rs
backend/src/db/: client.rs  models.rs  schema.rs
backend/src/routes/: expense_list.rs  mod.rs  user.rs
